--- a/app/pages/garments/garment-overview/garment-overview.component.html
+++ b/app/pages/garments/garment-overview/garment-overview.component.html
@@ -1,16 +1,19 @@
-<!-- <ActionBar class="action-bar">
-  <Label class="action-bar-title" text="All items"></Label>
-</ActionBar> -->
+<StackLayout *ngFor="let size of sizes">
+    <CheckBox text="{{ size }}" checked="false" (tap)=filterGarmentsOnSize(size)></CheckBox>
+</StackLayout>
 <StackLayout class="border">
   <StackLayout> <Label text="&#xA;"></Label></StackLayout>
-  <StackLayout width="100%" *ngFor="let item of garments">
+  <StackLayout width="100%" *ngFor="let item of ( garments | garmentAttributeFilter : garmentFilter )">
       <CardView margin="2" elevation="10" radius="1">
          <GridLayout rows="*,*,*,*,*" columns="*">
             <ActivityIndicator row="0" [busy]="processing" width="100" height="100" class="activity-indicator"></ActivityIndicator>
             <Image [src]="item.image" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"
               (tap)="toGarmentDetail(item.id)"></Image>
-             <Label class="gridItem boldText" [text]="item.brand" textWrap="true" row="2" ></Label>
-             <Label class="gridItem" [text]="item.name" textWrap="true" row="3"></Label>
+             <Label class="gridItem boldText" text="{{ item.brand }}" textWrap="true" row="2" ></Label>
+             <Label *ngIf="item.size" class="gridItem" text="{{ item.name }} ({{ item.size }})"
+             textWrap="true" row="3"></Label>
+             <Label *ngIf="item.pantWaist" class="gridItem" text="{{ item.name }} ({{ item.pantWaist }})"
+             textWrap="true" row="3"></Label>
              <Label text="&#xA;" row="4"></Label>
          </GridLayout>
       </CardView>
