--- a/app/pages/swap/pick-swap-return-garment/pick-swap-return-garment.component.html
+++ b/app/pages/swap/pick-swap-return-garment/pick-swap-return-garment.component.html
@@ -30,7 +30,8 @@
           <Label text="&#xA;"></Label>
           <Label class="text-center" text="Choose the item you want to swap in return"></Label>
 
-          <app-garment-overview #garmentOverview [(garmentsUrl)]="garmentsUrl"></app-garment-overview>
+          <app-garment-overview #garmentOverview [(garmentsUrl)]="garmentsUrl"
+            [(garmentId)]="garmentId"></app-garment-overview>
 
           </StackLayout>
         </ScrollView>
