--- a/app/pages/swap/pick-swap-return-garment/pick-swap-return-garment.component.html
+++ b/app/pages/swap/pick-swap-return-garment/pick-swap-return-garment.component.html
@@ -31,7 +31,7 @@
           <Label class="text-center" text="Choose the item you want to swap in return"></Label>
 
           <app-garment-overview #garmentOverview [(garmentsUrl)]="garmentsUrl"
-            [(garmentId)]="garmentId"></app-garment-overview>
+            [(garmentId)]="swapRequest.garmentId"></app-garment-overview>
 
           </StackLayout>
         </ScrollView>
