--- a/app/pages/swap/requests/requests.component.html
+++ b/app/pages/swap/requests/requests.component.html
@@ -1,36 +1,93 @@
-<TabView>
+<ActionBar class="action-bar">
+  <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="navigateToHome()"></NavigationButton>
+  <Label class="action-bar-title" text="All swap requests"></Label>
+</ActionBar>
+
+<StackLayout class="page">
+  <TabView>
     <StackLayout *tabItem="{title: 'New'}">
-      <ListView [items]="receivedRequestsNew" (itemTap)="openMessage($event)" class="list-group" separatorColor="white">
+      <ListView [items]="requestsNewAndUpdated" (itemTap)="openMessage($event)" class="list-group" separatorColor="white">
       <ng-template let-request="item" let-i="index">
           <StackLayout class="list-group-item">
 
-            <Label *ngIf="sendOrReceived == 'received'" class="text-center font-weight-bold"
-              text="Swap request from {{ request.receivedFromUser }}"></Label>
-            <Label *ngIf="sendOrReceived == 'send'" class="text-center font-weight-bold"
-                text="Request send: "></Label>
+            <StackLayout *ngIf="request.status == 'NEW'">
+              <Label *ngIf="userId != request.receivedFromId" class="text-center font-weight-bold"
+                text="Swap request from {{ request.receivedFromUser }}:"></Label>
+              <Label *ngIf="userId == request.receivedFromId" class="text-center font-weight-bold"
+                  text="Request send: "></Label>
 
-            <Label class="text-center" text="{{ request.message }}" textWrap="true"></Label>
-            <StackLayout class="border gray">
-              <Image [src]="request.garmentImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+              <Label class="text-center" text="{{ request.message }}" textWrap="true"></Label>
+              <StackLayout class="border gray">
+                <Image [src]="request.garmentImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+              </StackLayout>
+              <Button *ngIf="userId != request.receivedFromId" class="btn btn-primary btn-rounded-lg btn-active"
+                (tap)="pickSwapReturnGarment(request)" text="Check it out">
+              </Button>
             </StackLayout>
-            <Button *ngIf="sendOrReceived == 'received'" class="btn btn-primary btn-rounded-lg btn-active"
-              (tap)="pickSwapReturnGarment(request)" text="Check it out"></Button>
 
+            <StackLayout *ngIf="request.status == 'PROCESSING'">
+              <Label *ngIf="userId == request.receivedFromId" class="text-center font-weight-bold"
+               text="Swap updated:"></Label>
+               <Label *ngIf="userId == request.receivedFromId" class="text-center"
+                [text]="request.messageInReturn" textWrap="true"></Label>
+
+              <StackLayout class="border green">
+                <Image [src]="request.garmentImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+                <Label class="text-center" text="{{userId == request.receivedFromId ? 'Garment selected by you' : 'Own garment'}}"></Label>
+              </StackLayout>
+              <Label class="verticalLine"></Label>
+              <StackLayout class="border gray">
+                <Image [src]="request.garmentInReturnImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+                <Label class="text-center" text="Own garment'"></Label>
+              </StackLayout>
+
+              <Button class="btn btn-primary btn-rounded-lg btn-active"
+                (tap)="acceptRequest(request)" text="Agree on Swap">
+              </Button>
+              <Button class="btn btn-cancel btn-primary btn-rounded-lg"
+                (tap)="rejectRequest(request)" text="Reject request">
+              </Button>
+
+            </StackLayout>
           </StackLayout>
       </ng-template>
       </ListView>
-      <StackLayout *ngIf="receivedRequestsNew?.length == 0">
+      <StackLayout *ngIf="requestsNewAndUpdated?.length == 0">
         <Label class="text-center font-weight-bold" text="No requests found"></Label>
       </StackLayout>
     </StackLayout>
 
-    <StackLayout *tabItem="{title: 'In process'}">
-      <ListView [items]="receivedRequestsProcessing" (itemTap)="openMessage($event)" class="list-group" separatorColor="white">
+
+    <StackLayout *tabItem="{title: 'Awaiting'}">
+      <ListView [items]="requestsProcessing" (itemTap)="openMessage($event)" class="list-group" separatorColor="white">
       <ng-template let-request="item" let-i="index">
           <StackLayout class="list-group-item">
 
-            <Label *ngIf="userId == request.receivedFromId" class="text-center font-weight-bold"
-             text="Swap updated - accept or deny swap"></Label>
+            <StackLayout class="border gray">
+              <Image [src]="request.garmentImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+              <Label class="text-center" text="Own garment"></Label>
+            </StackLayout>
+            <Label class="verticalLine"></Label>
+            <StackLayout class="border green">
+              <Image [src]="request.garmentInReturnImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
+              <Label class="text-center" text="Your selected return garment"></Label>
+            </StackLayout>
+             <Label class="text-center font-weight-bold" text="Awaiting confirmation from user"></Label>
+
+          </StackLayout>
+
+      </ng-template>
+      </ListView>
+      <StackLayout *ngIf="requestsProcessing?.length == 0">
+        <Label class="text-center font-weight-bold" text="No requests found"></Label>
+      </StackLayout>
+    </StackLayout>
+
+    <StackLayout *tabItem="{title: 'Done'}">
+      <ListView [items]="requestsDone" (itemTap)="openMessage($event)" class="list-group" separatorColor="white">
+      <ng-template let-request="item" let-i="index">
+          <StackLayout class="list-group-item">
+
             <StackLayout class="{{userId == request.receivedFromId ? 'border green' : 'border gray' }}">
               <Image [src]="request.garmentImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
               <Label class="text-center" text="{{userId == request.receivedFromId ? 'Garment selected by you' : 'Own garment'}}"></Label>
@@ -40,39 +97,20 @@
               <Image [src]="request.garmentInReturnImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
               <Label class="text-center" text="{{userId == request.receivedFromId ? 'Own garment' : 'Your selected return garment'}}"></Label>
             </StackLayout>
-            <StackLayout>
+
+            <Button *ngIf="userId != request.receivedFromId"  class="btn btn-primary btn-rounded-lg btn-active"
+              (tap)="checkUserDetails(request.receivedFromId)" text="Check user details">
+            </Button>
             <Button *ngIf="userId == request.receivedFromId" class="btn btn-primary btn-rounded-lg btn-active"
-              (tap)="acceptRequest(request)" text="Agree on Swap"></Button>
-            <Button *ngIf="userId == request.receivedFromId" class="btn btn-cancel btn-primary btn-rounded-lg"
-                (tap)="rejectRequest(request)" text="Reject request"></Button>
-            </StackLayout>
-             <Label *ngIf="userId != request.receivedFromId" class="text-center font-weight-bold" text="Awaiting confirmation from user"></Label>
-          </StackLayout>
-      </ng-template>
-      </ListView>
-      <StackLayout *ngIf="receivedRequestsProcessing?.length == 0">
-        <Label class="text-center font-weight-bold" text="No requests found"></Label>
-      </StackLayout>
-    </StackLayout>
-
-    <StackLayout *tabItem="{title: 'Done'}">
-      <ListView [items]="receivedRequestsDone" (itemTap)="openMessage($event)" class="list-group" separatorColor="white">
-      <ng-template let-request="item" let-i="index">
-          <StackLayout class="list-group-item">
-
-            <StackLayout class="border gray">
-              <Image [src]="request.garmentImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
-            </StackLayout>
-            <Label class="verticalLine"></Label>
-            <StackLayout class="border green">
-              <Image [src]="request.garmentInReturnImage" [width]="previewSize" [height]="previewSize" stretch="aspectFit" row="0"></Image>
-            </StackLayout>
+              (tap)="checkUserDetails(userId)" text="Check user details">
+            </Button>
 
           </StackLayout>
       </ng-template>
       </ListView>
-      <StackLayout *ngIf="receivedRequestsDone?.length == 0">
+      <StackLayout *ngIf="requestsDone?.length == 0">
         <Label class="text-center font-weight-bold" text="No requests found"></Label>
       </StackLayout>
     </StackLayout>
-</TabView>
+  </TabView>
+</StackLayout>
